Just need to fix excess white space and nav bar

--- a/CSS/flex.css
+++ b/CSS/flex.css
@@ -57,6 +57,12 @@ footer {
     width: 360px; 
     margin-left: 10px;
   }
+  .skills-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+  }
   .last-p {
       margin: 16px 75px;
   }
@@ -102,5 +108,7 @@ footer {
         position: relative;
         top: -60px; 
     }
-  
+  #portfolio {
+   text-align: center;
+  }
 }
