--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ ul {
 }
 .list {
     font-size: 12px;
+    color: olive;
 }
 .name {
     margin-top: 16px;
@@ -44,6 +45,7 @@ img {
     width: 280px;
     margin: 30px 20px;
     display: block;
+    border: 3px solid black;
 }
 .profile {
     width: 200px;
@@ -60,7 +62,7 @@ p {
 }
 a {
     text-decoration: none;
-    color: black;
+    color: olive;
     font-weight: bold;
 }
 .email {
